Bug 144145 - recent builds of Trunk against 7.3.0alpha Skia Vulkan rendering can not be enabled, Windows 10 Intel Iris Plus
Summary: recent builds of Trunk against 7.3.0alpha Skia Vulkan rendering can not be en...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, regression
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2021-08-28 14:38 UTC by V Stuart Foote
Modified: 2021-09-01 13:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2021-08-28 14:38:27 UTC
Windows 10 (21H1) laptop, 1080p res display, with Intel Iris Plus GPU and
Driver Version	27.20.100.9466

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 05ff3d67d0e2e436406786c949eb7cfca107ba33
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Unable to launch with Skia Vulkan rendering. Same system/driver had no issue with the 2021-08-16 build 5aac78e5fb241050a86714687e9ff8804588ae3c

Skia log from 2021-08-16 build of trunk
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5aac78e5fb241050a86714687e9ff8804588ae3c
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded


RenderMethod: vulkan
Vendor: 0x8086
Device: 0x8a52
API: 1.2.170
Driver: 0.402.1274
DeviceType: integrated
DeviceName: Intel(R) Iris(R) Plus Graphics

but with the build 2021-08-28, unable to launch with Skia Vulkan rendering; failing back to Skia Raster.  GPU/driver pair are not denylisted [1]

Is there some way to force the LO launch with Skia Vulkan rendering force enabled? Or would the force only bypass a denylist entry (which isn't present here).

=-ref-=

https://opengrok.libreoffice.org/history/core/vcl/skia/skia_denylist_vulkan.xml
Comment 1 V Stuart Foote 2021-08-28 14:45:37 UTC
@Luboš, this was unexpected. Is there any thing I can provide that would help you tease out why the sudden change for this pretty generic Windows 10 Intel GPU & driver not launching with functional Vulkan rendering?
Comment 2 V Stuart Foote 2021-08-28 16:26:22 UTC
@Luboš, * --ran bibisect against bibisect-win64-7.3 but that was only updated through the 2021-08-19 builds of master.

Regression somewhere in the range:

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=5aac78e5fb241050a86714687e9ff8804588ae3c..05ff3d67d0e2e436406786c949eb7cfca107ba33

In that range do see a few Skia related commits including the work for Skia support in macOS; and you mention a fix for Vulkan crashing to be able to update beyond skia/m91 in https://gerrit.libreoffice.org/c/core/+/120967 but I didn't see specifics for how you fixed that.
Comment 3 Commit Notification 2021-08-31 08:06:09 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a0f2f074dd643b723bfbcc5c96e4f5ee8da87a3

fix Skia flushing to screen on Windows (tdf#144145)

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 V Stuart Foote 2021-09-01 13:22:48 UTC
checks good with 2021-09-01 nightly from TB77
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d5ade739771ddf06cc7ee6d4af15672bfcf09ed6
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

RenderMethod: vulkan
Vendor: 0x8086
Device: 0x8a52
API: 1.2.170
Driver: 0.402.1274
DeviceType: integrated
DeviceName: Intel(R) Iris(R) Plus Graphics
Denylisted: no