fix Skia flushing to screen on Windows (tdf#144145)

Should have been part of eb37b1e346f5651ce8e6848e51103a8986a57c36.

Change-Id: I25c5524fcea90ccc30d880451034d0fa1716b6f5